--- a/3.routing-api-handling.md
+++ b/3.routing-api-handling.md
@@ -11,7 +11,7 @@
 ## Exercises
 
 ##### Task 1.
-Install npm package [axios](https://www.npmjs.com/package/axios) and create new class component `Contact.js` in `src/components`. Use `axios.get()` to get data from the api `https://jsonplaceholder.typicode.com/users` and display those in the `<table>` tag. You can use the below snippet for your component elements.
+Install npm package [swr](https://swr.vercel.app/) and create a new component `Contact.js` in `src/components`. Use `useSWR()` to get data from the api `https://jsonplaceholder.typicode.com/users` and display those in the `<table>` tag. You can use the below snippet for your component elements.
 
 ```js
 // Contact.js
@@ -94,40 +94,8 @@ Install npm package [axios](https://www.npmjs.com/package/axios) and create new 
 
 
 ##### Task 2.
-Install npm package [react-router-dom](https://www.npmjs.com/package/react-router-dom) and update the root component `App.js` as below code:
+Install npm package [react-router](https://reactrouter.com/) and update the root component `App.js` as below code:
 
-a/ Change the `<a>` tag to `Link` component of `react-router-dom` in component `Navbar.js` so that it can render the correct component for each route.
+a/ Change the `<a>` tag to `Link` component of `react-router` in component `Navbar.js` so that it can render the correct component for each route.
 
-b/ Add [**No match route**](https://reactrouter.com/web/example/no-match)
-
-```js
-// App.js
-   import React from "react";
-   import Navbar from "./components/Navbar";
-   import Home from "./components/Home";
-   import Contact from "./components/Contact";
-   import { BrowserRouter, Switch, Route } from "react-router-dom";
-
-   class App extends React.Component {
-      render() {
-         return (
-            <BrowserRouter>
-              <div>
-                <Navbar />
-
-                <Switch>
-                  <Route exact path="/home">
-                    <Home></Home>
-                  </Route>
-                  <Route exact path="/contact">
-                    <Contact></Contact>
-                  </Route>
-                </Switch>
-              </div>
-            </BrowserRouter>
-         );
-      }
-   }
-
-   export default App;
-```
+b/ Add **No match route**
