--- a/3.routing-api-handling.md
+++ b/3.routing-api-handling.md
@@ -11,32 +11,45 @@
 ## Exercises
 
 ##### Task 1.
-Install npm package [swr](https://swr.vercel.app/) and create a new component `Contact.js` in `src/components`. Use `useSWR()` to get data from the api `https://jsonplaceholder.typicode.com/users` and display those in the `<table>` tag. You can use the below snippet for your component elements.
+Install npm package [swr](https://swr.vercel.app/) and create a new component `Contact.jsx` in `src/components`. Use `useSWR()` to get data from the api `https://jsonplaceholder.typicode.com/users` and display those in the `<table>` tag. You can use the below snippet for your component elements.
 
 ```js
-// Contact.js
-   <table id="table">
-     <thead>
-       <th>Id</th>
-       <th>Name</th>
-       <th>Email</th>
-     </thead>
-     <tbody>
-       <tr>
-         <td>1</td>
-         <td>ABC</td>
-         <td>abc@nomail.com</td>
-       </tr>
-       <tr>
-         <td>2</td>
-         <td>XYZ</td>
-         <td>xyz@nomail.com</td>
-       </tr>
-     </tbody>
-   </table>
+// Contact.jsx
+   <div id="contact-container">
+      <h1>Contact List</h1>
+      <table id="table">
+          <thead>
+              <tr>
+                  <th>Id</th>
+                  <th>Name</th>
+                  <th>Email</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td>1</td>
+                  <td>ABC</td>
+                  <td>abc@nomail.com</td>
+              </tr>
+              <tr>
+                  <td>2</td>
+                  <td>XYZ</td>
+                  <td>xyz@nomail.com</td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
 ```
 
 ```css
+   #contact-container {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       padding: 2rem;
+   }
+
    #table {
      border-collapse: separate;
      border-radius: 10px;
